# mewcode

./: .gitignore  README.md  TUTORIAL.md  checklist.md  example.mewcode-hooks.yaml  example.mewcode-mcp.yaml  example.mewcode.yaml  pyproject.toml  spec.md  tasks.md
.claude/: settings.local.json
mewcode/: __init__.py  __main__.py  main.py
mewcode/agent/: __init__.py  events.py  loop.py
mewcode/commands/: __init__.py  dispatcher.py  parser.py  registry.py  types.py
mewcode/config/: __init__.py  loader.py  models.py
mewcode/conversation/: __init__.py  compression.py  history.py  summarizer.py  truncator.py
mewcode/hooks/: __init__.py  actions.py  conditions.py  engine.py  loader.py  models.py  templates.py
mewcode/instructions/: __init__.py  loader.py
mewcode/mcp/: __init__.py  adapter.py  client.py  config.py  manager.py  pool.py  protocol.py
mewcode/notes/: __init__.py  categories.py  manager.py
mewcode/prompts/: __init__.py  builder.py  environment.py  injector.py  loader.py
mewcode/providers/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py
mewcode/security/: __init__.py  blacklist.py  guard.py  models.py  policy.py  sandbox.py
mewcode/skills/: __init__.py  executor.py  loader.py  models.py  registry.py  tool.py
mewcode/storage/: __init__.py  sessions.py
mewcode/subagent/: __init__.py  filter.py  manager.py  models.py  runner.py  tool.py
mewcode/teams/: __init__.py  lead.py  mailbox.py  member.py  merger.py  models.py  persistence.py  registry.py  scheduler.py  tasks.py  tools.py
mewcode/tools/: __init__.py  base.py  glob.py  (+7 more)
(+43 files in other folders)
