[project]
name = "mewcode"
version = "0.1.0"
description = "A terminal AI coding assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mewcode = "mewcode.__main__:entry_point"
